Probando cambios en el commit

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="img-cartas">
                 <img src="assets//hess-lord.jpg" alt="">
             </div>
-            <p>Estamos muy emocionados de anunciar nuestra primera fecha del 2023!
+            <p>Estamos muy emocionados de anunciar nuestra primera fecha del 2023!!
                 HESS junto a LORD DIVINE en Rosario!
                 Viernes 5 de mayo en el Complejo Cultural Atlas (Mitre 645)</p>
         </div>
