--- a/music.html
+++ b/music.html
@@ -45,10 +45,13 @@
             <h2>Harpokrates - 2019</h2>
             <ul id="playlist-harpokrates"></ul>
 
+            <h2>Aeon of Ma'at Part 1 - 2024</h2>
+            <ul id="playlist-aeon"></ul>
+
             <h2>Iron Maiden Cover - 2021</h2>
             <ul id="playlist-maiden"></ul>
 
-            <h2>Single</h2>
+            <h2>Singles</h2>
             <ul id="playlist-sailor"></ul>
 
             <audio controls id="audio-player">
