--- a/shows.html
+++ b/shows.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LIVE SHOWS</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body id="body">
     <nav class="navegador">
         <div class="nav">
@@ -32,34 +34,59 @@
     <article>
         <section>
             <div class="hess">
-                <h1>SHOWS</h1>
+                <h1>LIVE SHOWS</h1>
             </div>
 
             <div class="cartas">
-                <h2>RIOT CITY - HESS (29-12-23)</h2>
+                <h2>ODISSEA + HESS + SILVERHEART</h2>
+                <div class="img-cartas">
+                    <img src="assets/hessg112.jpg" alt="">
+                </div>
+                <p>01-06-24</p>
+                <p>El sábado 01 de junio del 2024 estuvimos presentes en el famoso "GALPÓN DE LA MÚSICA"
+                    en Rosario junto a ODDISEA y a SILVERHEART que presentaba su nuevo material.</p>
+            </div>
+
+            <div class="cartas">
+                <h2>HESS + UNDER THE SILENCE + INNERFORCE</h2>
+                <div class="img-cartas">
+                    <img src="assets/hessquesearock.jpg" alt="">
+                </div>
+                <p>27-04-24</p>
+                <p>El sábado 27 de abril del 2024 vinieron los chicos de INNERFORCE desde Bs As a
+                    compartir escenario con nosotros, donde también estuvieron presentes los chicos de UNDER THE SILENCE
+                    en el bar QUE SEA ROCK - Rosario</p>
+            </div>
+
+            <div class="cartas">
+                <h2>RIOT CITY - HESS</h2>
                 <div class="img-cartas">
                     <img src="assets/riot.jpg" alt="">
                 </div>
-                <p>Nos enorgullece anunciar que seremos teloneros de esta gran banda Canadiense de Power Metal, el 9 de
+                <p>09-12-23</p>
+                <p>Nos enorgullece anunciar que fuimos teloneros de esta gran banda Canadiense de Power Metal, el 9 de
                     diciembre del 2023 en el Club Cultural BULA - Bs As..</p>
             </div>
 
             <div class="cartas">
-                <h2>Claudio TANO Marciello (01-12-23)</h2>
+                <h2>Claudio TANO Marciello</h2>
                 <div class="img-cartas">
                     <img src="assets/tano.jpg" alt="">
                 </div>
+                <p>01-12-23</p>
                 <p>Noche inolvidable compartiendo fecha con el gran Claudio Tano Marciello.</p>
             </div>
 
             <div class="cartas">
-                <h2>HESS + LORD DIVINE (05-05-23)</h2>
+                <h2>HESS + LORD DIVINE</h2>
                 <div class="img-cartas">
                     <img src="assets/hess-lord.jpg" alt="">
                 </div>
-                <p>Estamos muy emocionados de anunciar nuestra primera fecha del 2023!
-                    HESS junto a LORD DIVINE en Rosario!
-                    Viernes 5 de mayo en el Complejo Cultural Atlas (Mitre 645)</p>
+                <p>05-05-23</p>
+                <p>Estamos muy emocionados de anunciar nuestra primera fecha 
+                del 2023 fue tremenda!!
+                HESS junto a LORD DIVINE en Rosario!
+                Viernes 5 de mayo en el Complejo Cultural Atlas</p>
             </div>
         </section>
 
@@ -103,10 +130,13 @@
                     src="icons/deezer.png" class="iconos" alt="..."></a>
             <a target="_blank" title="Paypal" href="STORE"><img src="icons/paypal.png" class="iconos" alt="..."></a>
         </div>
-        <div class="home"><a href="shows.html"><h3>. : Home : .</h3></a></div>
+        <div class="home"><a href="shows.html">
+                <h3>. : Home : .</h3>
+            </a></div>
     </footer>
-    
+
 
     <script src="code.js"></script>
 </body>
+
 </html>
