--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
         </div>
 
         <div class="cartas-aside">
+            <h2>HESS-INNERFORCE-UNDER THE SILENCE (27-04-2024)</h2>
+            <div class="img-cartas">
+                <img src="assets//hessquesearock.jpg" alt="">
+            </div>
+            <p>Queremos anunciarles que el sábado 27 de abril del 2024 vienen los chicos de INNERFORCE desde Bs As a
+                compartir escenario con nosotros, donde también se harán presentes los chicos de UNDER THE SILENCE
+                en el bar QUE SEA ROCK - Rosario</p>
+        </div>
+
+        <div class="cartas-aside">
             <h2>RIOT CITY - HESS (29-12-23)</h2>
             <div class="img-cartas">
                 <img src="assets//riot.jpg" alt="">
@@ -77,7 +87,7 @@
         <section>
             <div class="hess">
                 <h1>HESS</h1>
-                <p>HESS is a Traditional Heavy Metal band ( NWOTHM ) from Rosario, Argentina</p>
+                <p>HESS is a Traditional Heavy Metal band "NWOTHM" from Rosario, Argentina</p>
             </div>
 
             <div class="cartas">
