--- a/biography.html
+++ b/biography.html
@@ -161,7 +161,7 @@
                             <li class="item-discography">● 2023 – Aeon Of Ma'at [Part 1]</li>
                         </ul>
 
-                        <a class="biography-link" href="music.html">Listen HESS</a>
+                        <a class="biography-link" href="music.html">Listen to HESS</a>
 
                 </div>
             
