--- a/index.html
+++ b/index.html
@@ -43,38 +43,52 @@
         </div>
 
         <div class="cartas-aside">
-            <h2>HESS-INNERFORCE-UNDER THE SILENCE (27-04-2024)</h2>
+            <h2>ODISSEA + HESS + SILVERHEART</h2>
+            <div class="img-cartas">
+                <img src="assets/hessg112.jpg" alt="">
+            </div>
+            <p>01-06-24</p>
+            <p>El sábado 01 de junio del 2024 estuvimos presentes en el famoso "GALPÓN DE LA MÚSICA"
+                en Rosario junto a ODDISEA y a SILVERHEART que presentaba su nuevo material.</p>
+        </div>
+
+        <div class="cartas-aside">
+            <h2>HESS-INNERFORCE-UNDER THE SILENCE</h2>
             <div class="img-cartas">
                 <img src="assets//hessquesearock.jpg" alt="">
             </div>
+            <p>27-04-2024</p>
             <p>Queremos anunciarles que el sábado 27 de abril del 2024 vienen los chicos de INNERFORCE desde Bs As a
                 compartir escenario con nosotros, donde también se harán presentes los chicos de UNDER THE SILENCE
                 en el bar QUE SEA ROCK - Rosario</p>
         </div>
 
         <div class="cartas-aside">
-            <h2>RIOT CITY - HESS (29-12-23)</h2>
+            <h2>RIOT CITY - HESS</h2>
             <div class="img-cartas">
                 <img src="assets//riot.jpg" alt="">
             </div>
+            <p>29-12-23</p>
             <p>Nos enorgullece anunciar que seremos teloneros de esta gran banda Canadiense se Power Metal, el 9 de
                 diciembre del 2023 en el Club Cultural BULA - Bs As..</p>
         </div>
 
         <div class="cartas-aside">
-            <h2>Claudio TANO Marciello (01-12-23)</h2>
+            <h2>Claudio TANO Marciello</h2>
             <div class="img-cartas">
                 <img src="assets//tano.jpg" alt="">
             </div>
+            <p>01-12-23</p>
             <p>Noche inolvidable compartiendo fecha con el gran Claudio Tano Marciello
             </p>
         </div>
 
         <div class="cartas-aside">
-            <h2>HESS + LORD DIVINE (05-05-23)</h2>
+            <h2>HESS + LORD DIVINE</h2>
             <div class="img-cartas">
                 <img src="assets//hess-lord.jpg" alt="">
             </div>
+            <p>05-05-23</p>
             <p>Estamos muy emocionados de anunciar nuestra primera fecha del 2023!!
                 HESS junto a LORD DIVINE en Rosario!
                 Viernes 5 de mayo en el Complejo Cultural Atlas (Mitre 645)</p>
