--- a/gallery.html
+++ b/gallery.html
@@ -31,359 +31,74 @@
         </div>
     </nav>
 
+
+    <div class="hess-gallery efect">
+        <h1>HESS GALLERY</h1>
+    </div>
+
+    
     <article class="article-gallery">
         <section>
-            <div class="hess-gallery efect">
-                <h1>HESS GALLERY</h1>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/hess casa.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/hess2g11.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/dariog11.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/bracag11.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/arig11.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/melg11.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/ericg11.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/hessg11.jpg" alt="">
-                </div>
-            </div>
-            <!-- ver fotos -->
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/riot.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/caught.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/braca.jpg" alt="">
-                </div>
-            </div>
-
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/aeon.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/melanieyes.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/dariodrummer.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/arielatlas.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/remera.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/arieldiego.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/hessstudio.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/melanired.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/arielyoung.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/darioia.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/diegoia.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/ericia.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/arielia.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/arimelani.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/bassist.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/melani1.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/beto.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/ericbass.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/dario.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/diego.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/discografia.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/drummerd.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/ensayohess.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/eric1.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/ericatlas.jpg" alt="">
-                </div>
-            </div>
-
-
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/german.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/germanmelani.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/hagalaz.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/diegos.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/harpokrates.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/hernan.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/hessanimal.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/ericgitar.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/hessatlas.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/hesshome.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/hucho.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/llavero.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/lordhess.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/diego1.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/marito.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/drummer.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/mati.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/melani.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/diegoanimal.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/ariels.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="cartas-gallery">
-                <div class="img-cartas-gallery">
-                    <img src="gallery/ruleta.jpg" alt="">
-                </div>
+            <div class="caja-imgs">
+                <img src="gallery/hess casa.jpg" alt="">
+                <img src="gallery/hess2g11.jpg" alt="">
+                <img src="gallery/dariog11.jpg" alt="">
+                <img src="gallery/bracag11.jpg" alt="">
+                <img src="gallery/arig11.jpg" alt="">
+                <img src="gallery/ericg11.jpg" alt="">
+                <img src="gallery/melg11.jpg" alt="">
+                <img src="gallery/hessg11.jpg" alt="">
+                <img src="gallery/riot.jpg" alt="">
+                <img src="gallery/caught.jpg" alt="">
+                <img src="gallery/braca.jpg" alt="">
+                <img src="gallery/aeon.jpg" alt="">
+                <img src="gallery/melanieyes.jpg" alt="">
+                <img src="gallery/dariodrummer.jpg" alt="">
+                <img src="gallery/arielatlas.jpg" alt="">
+                <img src="gallery/remera.jpg" alt="">
+                <img src="gallery/arieldiego.jpg" alt="">
+                <img src="gallery/hessstudio.jpg" alt="">
+                <img src="gallery/melanired.jpg" alt="">
+                <img src="gallery/arielyoung.jpg" alt="">
+                <img src="gallery/darioia.jpg" alt="">
+                <img src="gallery/diegoia.jpg" alt="">
+                <img src="gallery/ericia.jpg" alt="">
+                <img src="gallery/arielia.jpg" alt="">
+                <img src="gallery/arimelani.jpg" alt="">
+                <img src="gallery/bassist.jpg" alt="">
+                <img src="gallery/melani1.jpg" alt="">
+                <img src="gallery/beto.jpg" alt="">
+                <img src="gallery/ericbass.jpg" alt="">
+                <img src="gallery/dario.jpg" alt="">
+                <img src="gallery/diego.jpg" alt="">
+                <img src="gallery/discografia.jpg" alt="">
+                <img src="gallery/drummerd.jpg" alt="">
+                <img src="gallery/ensayohess.jpg" alt="">
+                <img src="gallery/eric1.jpg" alt="">
+                <img src="gallery/ericatlas.jpg" alt="">
+                <img src="gallery/german.jpg" alt="">
+                <img src="gallery/germanmelani.jpg" alt="">
+                <img src="gallery/hagalaz.jpg" alt="">
+                <img src="gallery/diegos.jpg" alt="">
+                <img src="gallery/harpokrates.jpg" alt="">
+                <img src="gallery/hernan.jpg" alt="">
+                <img src="gallery/hessanimal.jpg" alt="">
+                <img src="gallery/ericgitar.jpg" alt="">
+                <img src="gallery/hessatlas.jpg" alt="">
+                <img src="gallery/hesshome.jpg" alt="">
+                <img src="gallery/hucho.jpg" alt="">
+                <img src="gallery/llavero.jpg" alt="">
+                <img src="gallery/lordhess.jpg" alt="">
+                <img src="gallery/diego1.jpg" alt="">
+                <img src="gallery/marito.jpg" alt="">
+                <img src="gallery/drummer.jpg" alt="">
+                <img src="gallery/mati.jpg" alt="">
+                <img src="gallery/melani.jpg" alt="">
+                <img src="gallery/diegoanimal.jpg" alt="">
+                <img src="gallery/ariels.jpg" alt="">
+                <img src="gallery/ruleta.jpg" alt="">
             </div>
         </section>
-
     </article>
 
 
