rehaciendo el music

--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
 
 <body id="body">
     <nav class="navegador">
-        <div class="nav">
+        <div id="nav" class="nav">
             <div class="dropdown boton">
                 <button class="dropbtn"></button>
                 <h3>HESS LINKS</h3>
@@ -26,7 +26,6 @@
                     <a class="nav-link wolfsbane" href="melanihess.html">Melani Hess</a>
                     <a class="nav-link wolfsbane" href="band.html">Band Members</a>
                     <a class="nav-link wolfsbane" href="videos.html">Videos</a>
-                    <a class="nav-link wolfsbane" href="discography.html">Discography</a>
                 </div>
             </div>
         </div>
@@ -34,14 +33,13 @@
 
 
     <div class="hess-gallery efect">
-        <h1>HESS GALLERY</h1>
+        <h1>GALLERY</h1>
     </div>
 
     
     <article class="article-gallery">
         <section>
             <div class="caja-imgs">
-                
                 <img src="gallery/hesscasa.webp" alt="">
                 <img src="gallery/hess2g11.webp" alt="">
                 <img src="gallery/dariog11.webp" alt="">
@@ -137,7 +135,7 @@
             <a target="_blank" title="Paypal" href="STORE"><img src="icons/paypal.webp" class="iconos" alt="..."></a>
         </div>
 
-        <div class="home"><a href="gallery.html">
+        <div class="home"><a href="#nav">
                 <h3>. : Home : .</h3>
             </a></div>
     </footer>
