--- a/biography.html
+++ b/biography.html
@@ -10,7 +10,7 @@
 
 <body id="body">
     <nav class="navegador">
-        <div class="nav">
+        <div id="nav" class="nav">
             <div class="dropdown boton">
                 <button class="dropbtn"></button>
                 <h3>HESS LINKS</h3>
@@ -26,7 +26,6 @@
                     <a class="nav-link wolfsbane" href="melanihess.html">Melani Hess</a>
                     <a class="nav-link wolfsbane" href="band.html">Band Members</a>
                     <a class="nav-link wolfsbane" href="videos.html">Videos</a>
-                    <a class="nav-link wolfsbane" href="discography.html">Discography</a>
                 </div>
             </div>
         </div>
@@ -323,7 +322,7 @@
                     src="icons/deezer.webp" class="iconos" alt="..."></a>
             <a target="_blank" title="Paypal" href="STORE"><img src="icons/paypal.webp" class="iconos" alt="..."></a>
         </div>
-        <div class="home"><a href="biography.html"><h3>. : Home : .</h3></a></div>
+        <div class="home"><a href="#nav"><h3>. : Home : .</h3></a></div>
     </footer>
 </body>
 
