--- a/music.html
+++ b/music.html
@@ -10,7 +10,7 @@
 
 <body id="body">
     <nav class="navegador">
-        <div class="nav">
+        <div id="nav" class="nav">
             <div class="dropdown boton">
                 <button class="dropbtn"></button>
                 <h3>HESS LINKS</h3>
@@ -26,7 +26,6 @@
                     <a class="nav-link wolfsbane" href="melanihess.html">Melani Hess</a>
                     <a class="nav-link wolfsbane" href="band.html">Band Members</a>
                     <a class="nav-link wolfsbane" href="videos.html">Videos</a>
-                    <a class="nav-link wolfsbane" href="discography.html">Discography</a>
                 </div>
             </div>
         </div>
@@ -40,20 +39,54 @@
     </div> -->
     <div class="play">
         <div id="audio-container">
-            <h2>Hagalaz - 2014</h2>
-            <ul id="playlist-hagalaz"></ul>
 
-            <h2>Harpokrates - 2019</h2>
-            <ul id="playlist-harpokrates"></ul>
+            <div class="carta-audio">
+                <h2>2012 - Blood and Iron 'Demo'</h2>
+                <div class="music-img">
+                    <img src="assets/HESSlogo.webp" alt="hess heavy metal logo">
+                </div>
+                <ul id="playlist-blod"></ul>
+            </div>
 
-            <h2>Aeon of Ma'at Part 1 - 2024</h2>
-            <ul id="playlist-aeon"></ul>
+            <div class="carta-audio">
+                <h2>2014 - Hagalaz - LP</h2>
+                <div class="music-img">
+                    <img src="assets/hagalaz.webp" alt="hagalaz album">
+                </div>
+                <ul id="playlist-hagalaz"></ul>
+            </div>
 
-            <h2>Iron Maiden Cover - 2021</h2>
-            <ul id="playlist-maiden"></ul>
+            <div class="carta-audio">
+                <h2>2019 - Harpokrates - LP</h2>
+                <div class="music-img">
+                    <img src="assets/harpokrates.webp" alt="">
+                </div>
+                <ul id="playlist-harpokrates"></ul>
+            </div>
 
-            <h2>Singles</h2>
-            <ul id="playlist-sailor"></ul>
+            <div class="carta-audio">
+                <h2>2024 - Aeon of Ma'at Part 1 - EP</h2>
+                <div class="music-img">
+                    <img src="assets/aeon.webp" alt="">
+                </div>
+                <ul id="playlist-aeon"></ul>
+            </div>
+
+            <div class="carta-audio">
+                <h2>Iron Maiden Cover - 2021</h2>
+                <div class="music-img">
+                    <img src="assets/caught.webp" alt="">
+                </div>
+                <ul id="playlist-maiden"></ul>
+            </div>
+
+            <div class="carta-audio">
+                <h2>Singles</h2>
+                <div class="music-img">
+                    <img src="assets/sailor.webp" alt="">
+                </div>
+                <ul id="playlist-sailor"></ul>
+            </div>
 
             <audio controls id="audio-player">
                 Tu navegador no soporta el elemento de audio.
@@ -94,7 +127,9 @@
                     src="icons/deezer.webp" class="iconos" alt="..."></a>
             <a target="_blank" title="Paypal" href="STORE"><img src="icons/paypal.webp" class="iconos" alt="..."></a>
         </div>
-        <div class="home"><a href="music.html"><h3>. : Home : .</h3></a></div>
+        <div class="home"><a href="#nav">
+                <h3>. : Home : .</h3>
+            </a></div>
     </footer>
 
     <script src="code.js"></script>
