--- a/gallery.html
+++ b/gallery.html
@@ -36,68 +36,72 @@
         <h1>GALLERY</h1>
     </div>
 
-    
+
     <article class="article-gallery">
         <section>
-            <div class="caja-imgs">
-                <img src="gallery/hesscasa.webp" alt="">
-                <img src="gallery/hess2g11.webp" alt="">
-                <img src="gallery/dariog11.webp" alt="">
-                <img src="gallery/bracag11.webp" alt="">
-                <img src="gallery/arig11.webp" alt="">
-                <img src="gallery/ericg11.webp" alt="">
-                <img src="gallery/melg11.webp" alt="">
-                <img src="gallery/hessg11.webp" alt="">
-                <img src="gallery/riot.webp" alt="">
-                <img src="gallery/caught.webp" alt="">
-                <img src="gallery/braca.webp" alt="">
-                <img src="gallery/aeon.webp" alt="">
-                <img src="gallery/melanieyes.webp" alt="">
-                <img src="gallery/dariodrummer.webp" alt="">
-                <img src="gallery/arielatlas.webp" alt="">
-                <img src="gallery/remera.webp" alt="">
-                <img src="gallery/arieldiego.webp" alt="">
-                <img src="gallery/hessstudio.webp" alt="">
-                <img src="gallery/melanired.webp" alt="">
-                <img src="gallery/arielyoung.webp" alt="">
-                <img src="gallery/darioia.webp" alt="">
-                <img src="gallery/diegoia.webp" alt="">
-                <img src="gallery/ericia.webp" alt="">
-                <img src="gallery/arielia.webp" alt="">
-                <img src="gallery/arimelani.webp" alt="">
-                <img src="gallery/bassist.webp" alt="">
-                <img src="gallery/melani1.webp" alt="">
-                <img src="gallery/beto.webp" alt="">
-                <img src="gallery/ericbass.webp" alt="">
-                <img src="gallery/dario.webp" alt="">
-                <img src="gallery/diego.webp" alt="">
-                <img src="gallery/discografia.webp" alt="">
-                <img src="gallery/drummerd.webp" alt="">
-                <img src="gallery/ensayohess.webp" alt="">
-                <img src="gallery/eric1.webp" alt="">
-                <img src="gallery/ericatlas.webp" alt="">
-                <img src="gallery/german.webp" alt="">
-                <img src="gallery/germanmelani.webp" alt="">
-                <img src="gallery/hagalaz.webp" alt="">
-                <img src="gallery/harpokrates.webp" alt="">
-                <img src="gallery/hernan.webp" alt="">
-                <img src="gallery/hessanimal.webp" alt="">
-                <img src="gallery/ericgitar.webp" alt="">
-                <img src="gallery/hessatlas.webp" alt="">
-                <img src="gallery/hesshome.webp" alt="">
-                <img src="gallery/hucho.webp" alt="">
-                <img src="gallery/llavero.webp" alt="">
-                <img src="gallery/lordhess.webp" alt="">
-                <img src="gallery/ericgalpo.webp" alt="">
-                <img src="gallery/marito.webp" alt="">
-                <img src="gallery/drummer.webp" alt="">
-                <img src="gallery/mati.webp" alt="">
-                <img src="gallery/melani.webp" alt="">
-                <img src="gallery/diegoanimal.webp" alt="">
-                <img src="gallery/ariels.webp" alt="">
-                <img src="gallery/ruleta.webp" alt="">
+            <div class="caja-imgs" id="gallery">
+                <img src="gallery/hesscasa.webp" alt=" ">
+                <img src="gallery/hess2g11.webp" alt=" ">
+                <img src="gallery/dariog11.webp" alt=" ">
+                <img src="gallery/bracag11.webp" alt=" ">
+                <img src="gallery/arig11.webp" alt=" ">
+                <img src="gallery/ericg11.webp" alt=" ">
+                <img src="gallery/melg11.webp" alt=" ">
+                <img src="gallery/hessg11.webp" alt=" ">
+                <img src="gallery/riot.webp" alt=" ">
+                <img src="gallery/caught.webp" alt=" ">
+                <img src="gallery/braca.webp" alt=" ">
+                <img src="gallery/aeon.webp" alt=" ">
+                <img src="gallery/melanieyes.webp" alt=" ">
+                <img src="gallery/dariodrummer.webp" alt=" ">
+                <img src="gallery/arielatlas.webp" alt=" ">
+                <img src="gallery/remera.webp" alt=" ">
+                <img src="gallery/arieldiego.webp" alt=" ">
+                <img src="gallery/hessstudio.webp" alt=" ">
+                <img src="gallery/melanired.webp" alt=" ">
+                <img src="gallery/arielyoung.webp" alt=" ">
+                <img src="gallery/darioia.webp" alt=" ">
+                <img src="gallery/diegoia.webp" alt=" ">
+                <img src="gallery/ericia.webp" alt=" ">
+                <img src="gallery/arielia.webp" alt=" ">
+                <img src="gallery/arimelani.webp" alt=" ">
+                <img src="gallery/bassist.webp" alt=" ">
+                <img src="gallery/melani1.webp" alt=" ">
+                <img src="gallery/beto.webp" alt=" ">
+                <img src="gallery/ericbass.webp" alt=" ">
+                <img src="gallery/dario.webp" alt=" ">
+                <img src="gallery/diego.webp" alt=" ">
+                <img src="gallery/discografia.webp" al t=" ">
+                <img src="gallery/drummerd.webp" alt=" ">
+                <img src="gallery/ensayohess.webp" alt=" ">
+                <img src="gallery/eric1.webp" alt=" ">
+                <img src="gallery/ericatlas.webp" alt=" ">
+                <img src="gallery/german.webp" alt=" ">
+                <img src="gallery/germanmelani.webp" alt=" ">
+                <img src="gallery/hagalaz.webp" alt=" ">
+                <img src="gallery/harpokrates.webp" alt=" ">
+                <img src="gallery/hernan.webp" alt=" ">
+                <img src="gallery/hessanimal.webp" alt=" ">
+                <img src="gallery/ericgitar.webp" alt=" ">
+                <img src="gallery/hessatlas.webp" alt=" ">
+                <img src="gallery/hesshome.webp" alt=" ">
+                <img src="gallery/hucho.webp" alt=" ">
+                <img src="gallery/llavero.webp" alt=" ">
+                <img src="gallery/lordhess.webp" alt=" ">
+                <img src="gallery/ericgalpo.webp" alt=" ">
+                <img src="gallery/marito.webp" alt=" ">
+                <img src="gallery/drummer.webp" alt=" ">
+                <img src="gallery/mati.webp" alt=" ">
+                <img src="gallery/melani.webp" alt=" ">
+                <img src="gallery/diegoanimal.webp" alt=" ">
+                <img src="gallery/ariels.webp" alt=" ">
+                <img src="gallery/ruleta.webp" alt=" ">
+                
             </div>
         </section>
+        <div id="lightbox">
+            <img src="">
+        </div>
     </article>
 
 
@@ -139,6 +143,8 @@
                 <h3>. : Home : .</h3>
             </a></div>
     </footer>
+
+    <script src="gallery_code.js"></script>
 </body>
 
 </html>
